# share-files-cli

./: .gitignore  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
sharef/: Cargo.toml
sharef/src/: deterministic_zip.rs  main.rs  utils.rs
sharef/src/utils/: deterministic_zip.rs
